src/objects/Offer_Incentive_Property__c.object
<CustomObject>
    <description>Offer Incentive Property</description>
    <fields>
        <fullName>Market__c</fullName>
        <formula>Offer_Incentive__r.Market__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Incentive__c</fullName>
        <description>Offer Incentive</description>
        <inlineHelpText>Offer Incentive</inlineHelpText>
        <label>Offer Incentive</label>
        <referenceTo>Offer_Incentive__c</referenceTo>
        <relationshipLabel>Offer Incentive Properties</relationshipLabel>
        <relationshipName>Offer_Incentive_Properties</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Property</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Offer Incentive Properties</relationshipLabel>
        <relationshipName>Offer_Incentive_Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Offer Incentive Property</label>
    <nameField>
        <displayFormat>OIP-{0000000000}</displayFormat>
        <label>Offer Incentive Property Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offer Incentive Properties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>